# rshash

./: .gitmodules  CMakeLists.txt  README.md  build.sh
benchmarks/: benchmark.sh  benchmark_lookup3.sh  benchmark_lookup3_server.sh  benchmark_our_comp_lookup.sh  benchmark_our_comp_lookup2.sh  benchmark_our_comp_lookup2_server.sh  benchmark_our_comp_lookup3_server.sh  benchmark_our_comp_lookup3compsimd_server.sh  benchmark_our_comp_lookup3compsimd_server2.sh  benchmark_our_comp_lookup3simd_server.sh  benchmark_our_comp_lookup_server.sh  benchmark_our_complookup2_server.sh  benchmark_our_lookup.sh  benchmark_our_lookup2.sh  benchmark_our_lookup2_server.sh  benchmark_our_lookup3.sh  benchmark_our_lookup_server.sh  benchmark_ours.sh  benchmark_ourspace.sh  benchmark_pibiri.sh  benchmark_rshash.sh  benchmark_sshash.sh  benchmark_sshash_lookup.sh  benchmark_sshash_server.sh  benchmark_sshash_synthetic.sh  benchmark_sshash_synthetic_server.sh  benchmark_synthetic.sh  benchmark_synthetic_server.sh  combine.sh  download_and_preprocess_datasets.sh  whole_benchmark_server.sh  whole_server_benchmark.sh  whole_synthetic_benchmark.sh
source/: CMakeLists.txt  EliasFano.hpp  bench.hpp  buffer.hpp  buffer_simd.hpp  build.hpp  comp_lookup.cpp  compact_vector.hpp  dict.cpp  dict.h  dict.hpp  dict4.hpp  dict_comp.cpp  dict_locate.cpp  dict_lookup.cpp  dict_lookup_unitigs.cpp  dict_lookup_unitigs_simd.cpp  dict_unitigs.cpp  dict_unitigs_hash.cpp  dict_unitigs_hash2.cpp  dict_unitigs_hash2_.cpp  dict_unitigs_hash3.cpp  dict_unitigs_hash4.cpp  ef.cpp  io.hpp  kmer_minimiser_hash.hpp  locate.cpp  lookup.cpp  lookup_rsindex.cpp  lookup_rsindex2.cpp  lookup_rsindex2_comp_simd.cpp  lookup_rsindex2_simd.cpp  lookup_rsindex3.cpp  lookup_rsindex3_comp_simd.cpp  lookup_rsindex3_simd.cpp  lookup_unitigs.cpp  lookup_unitigs2.cpp  lookup_unitigs3.cpp  lookup_unitigs_simd.cpp  lookup_unitigsr.cpp  (+39 more)
test/: CMakeLists.txt  bfkmers.cpp  check_views.cpp  convert.cpp  countkmers.cpp  datasets.cpp  dna_to_fasta.cpp  freqmin.cpp  freqmins1.cpp  freqmins2.cpp  freqmins3.cpp  hashtable.cpp  minimizer_stats.cpp  minimizer_stats2.cpp  minimizer_stats3.cpp  shrink_queries.cpp  simulate_query.cpp  simulate_text.cpp  test.sh  verify.cpp  verify.sh
test/datasets/: r-0_k20_query.fasta  r-1_k20_query.fasta  r-2_k20_query.fasta  r-2_k31.positions  r-2_k31_query.fasta  r-2_k31_text.fasta  r-3_k31.positions  r-3_k31_query.fasta  r-4_k31_query.fasta  r-5_k31.positions  r-5_k31_query.fasta
test/datasets/1-lookup-random/: r-0_k20.positions  r-0_k20_query.fasta  r-0_k20_text.fasta  r-1_k20.positions  r-1_k20_query.fasta  r-1_k20_text.fasta  r-2_k20.positions  r-2_k20_query.fasta  r-3_k31_query.fasta  r-3_k31_text.fasta  r-4_k31.positions  r-4_k31_query.fasta  r-4_k31_text.fasta  r-5_k31_query.fasta
test/datasets/2-stream-random/: r-0_k31.positions  r-0_k31_query.fasta  r-0_k31_text.fasta  r-1_k31.positions  r-1_k31_query.fasta  r-1_k31_text.fasta  r-2_k31.positions  r-2_k31_query.fasta  r-3_k31.positions  r-3_k31_query.fasta  r-3_k31_text.fasta  r-4_k31.positions  r-4_k31_query.fasta  r-4_k31_text.fasta  r-5_k31.positions  r-5_k31_query.fasta
