add_executable (rshash rshash.cpp rshash3.cpp rshash2.cpp rshash1.cpp)
target_compile_options(rshash PRIVATE -O3 -march=native -Wno-interference-size)
target_include_directories(rshash PRIVATE ${CMAKE_SOURCE_DIR}/sux)
target_compile_definitions(rshash PRIVATE PARSEARCH)
target_include_directories(rshash PRIVATE ${CMAKE_SOURCE_DIR}/lib/gtl)
target_link_libraries(rshash PRIVATE seqan3::seqan3 sharg::sharg gtl)
